documents, pdf-loader: Fix previewing of ODFs and OOXMLs on OneDrive

OneDrive documents were being converted to PDFs via GdPdfLoader, but
LOKDocView was being used instead of EvView to render them. LOKDocView
uses the document's URI property, and in this case it is not a valid
URI that it can use. As a result the preview would fail and sometimes
crash the application.

Solve all that by removing the PDF conversion, and passing the correct
URI to LOKDocView.

This effectively reverts 0bfb23786dc84d390c4bd6bde5f20987874e1e9b

https://bugzilla.gnome.org/show_bug.cgi?id=774937