src/lib/gd-pdf-loader.h
@@ -28,7 +28,6 @@
 
 #define GOA_API_IS_SUBJECT_TO_CHANGE
 #include <gdata/gdata.h>
-#include <zpj/zpj.h>
 
 G_BEGIN_DECLS
 
@@ -47,14 +46,6 @@ void gd_pdf_loader_load_gdata_entry_async (GDataEntry *entry,
                                            gpointer user_data);
 EvDocumentModel *gd_pdf_loader_load_gdata_entry_finish (GAsyncResult *res,
                                                         GError **error);
-
-void gd_pdf_loader_load_zpj_entry_async (ZpjSkydriveEntry *entry,
-                                         ZpjSkydrive *service,
-                                         GCancellable *cancellable,
-                                         GAsyncReadyCallback callback,
-                                         gpointer user_data);
-EvDocumentModel *gd_pdf_loader_load_zpj_entry_finish (GAsyncResult *res,
-                                                      GError **error);
 
 G_END_DECLS
 
